src/objects/Legacy_Calculator_Data__c.object
<CustomObject>
    <fields>
        <fullName>VP_NRG_Lease_Escalator__c</fullName>
        <label>VP_NRG_Lease_Escalator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VP_NRG_Lease_Monthly_Payment_Incl_Tax__c</fullName>
        <label>VP_NRG_Lease_Monthly_Payment_Incl_Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRG_Lease_Monthly_Payment__c</fullName>
        <label>VP_NRG_Lease_Monthly_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRG_Lease_Term__c</fullName>
        <label>VP_NRG_Lease_Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_NRG_Lifetime_Sales_Tax__c</fullName>
        <label>VP_NRG_Lifetime_Sales_Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRG_Prepay_Amt_After_Tax__c</fullName>
        <label>VP_NRG_Prepay_Amt_After_Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRG_Prepay_Amt__c</fullName>
        <label>VP_NRG_Prepay_Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRG_Total_Payments_Over_Lease__c</fullName>
        <label>VP_NRG_Total_Payments_Over_Lease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Net_Cost__c</fullName>
        <label>VP_Net_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_New_Bill__c</fullName>
        <label>VP_New_Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Overall_Astrum_SQ__c</fullName>
        <label>VP_Overall_Astrum_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Overall_NRG_SQ__c</fullName>
        <description>VP_Overall_NRG_SQ</description>
        <inlineHelpText>VP_Overall_NRG_SQ</inlineHelpText>
        <label>VP_Overall_NRG_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Overall_Panel_Count__c</fullName>
        <label>VP_Overall_Panel_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Overall_Sunnova_SQ__c</fullName>
        <label>VP_Overall_Sunnova_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Overall_Surcharge__c</fullName>
        <label>VP_Overall_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Overall_Surcharge_per_watt__c</fullName>
        <label>VP_Overall_Surcharge_per_watt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Overall_Watts__c</fullName>
        <label>VP_Overall_Watts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_PPW_After_Promo__c</fullName>
        <label>VP_PPW_After_Promo</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_PPW_Before_Promo__c</fullName>
        <label>VP_PPW_Before_Promo</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_PPW_Before_Surcharges__c</fullName>
        <label>VP_PPW_Before_Surcharges</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Panel__c</fullName>
        <description>VP_Panel</description>
        <inlineHelpText>VP_Panel</inlineHelpText>
        <label>VP_Panel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Percent_Solar__c</fullName>
        <label>VP_Percent_Solar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VP_PriceList_Actual_Price_Before_Surchar__c</fullName>
        <description>VP_PriceList_Actual_Price_Before_Surcharges</description>
        <inlineHelpText>VP_PriceList_Actual_Price_Before_Surcharges</inlineHelpText>
        <label>VP_PriceList_Actual_Price_Before_Surchar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_PriceList_Final_Price__c</fullName>
        <description>VP_PriceList_Final_Price</description>
        <inlineHelpText>VP_PriceList_Final_Price</inlineHelpText>
        <label>VP_PriceList_Final_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_PriceList_Max_Price__c</fullName>
        <description>VP_PriceList_Max_Price</description>
        <inlineHelpText>VP_PriceList_Max_Price</inlineHelpText>
        <label>VP_PriceList_Max_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_PriceList_Next_Max_Step__c</fullName>
        <description>VP_PriceList_Next_Max_Step</description>
        <inlineHelpText>VP_PriceList_Next_Max_Step</inlineHelpText>
        <label>VP_PriceList_Next_Max_Step</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_PriceList_Surcharge_Total__c</fullName>
        <description>VP_PriceList_Surcharge_Total</description>
        <inlineHelpText>VP_PriceList_Surcharge_Total</inlineHelpText>
        <label>VP_PriceList_Surcharge_Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Promo_Amt_Used_To_Reduce_Lease__c</fullName>
        <description>VP_Promo_Amt_Used_To_Reduce_Lease</description>
        <inlineHelpText>VP_Promo_Amt_Used_To_Reduce_Lease</inlineHelpText>
        <label>VP_Promo_Amt_Used_To_Reduce_Lease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Promo_Cash_Back_Lease__c</fullName>
        <description>VP_Promo_Cash_Back_Lease</description>
        <inlineHelpText>VP_Promo_Cash_Back_Lease</inlineHelpText>
        <label>VP_Promo_Cash_Back_Lease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Promo_Expiration_Days__c</fullName>
        <description>VP_Promo_Expiration_Days</description>
        <inlineHelpText>VP_Promo_Expiration_Days</inlineHelpText>
        <label>VP_Promo_Expiration_Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Promo_Name__c</fullName>
        <description>VP_Promo_Name</description>
        <inlineHelpText>VP_Promo_Name</inlineHelpText>
        <label>VP_Promo_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Proposal_Monthly_Savings_Plan_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Proposal Monthly Savings Plan Flag</description>
        <inlineHelpText>Proposal Monthly Savings Plan Flag</inlineHelpText>
        <label>VP_Proposal_Monthly_Savings_Plan_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Proposal_No_Solar_Plan_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VP_Proposal_No_Solar_Plan_Flag</description>
        <inlineHelpText>VP_Proposal_No_Solar_Plan_Flag</inlineHelpText>
        <label>VP_Proposal_No_Solar_Plan_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Proposal_One_Pay_Plan_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Proposal One Pay Plan Flag</description>
        <inlineHelpText>Proposal One Pay Plan Flag</inlineHelpText>
        <label>VP_Proposal_One_Pay_Plan_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Proposal_Solar_Finance_Plan_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Proposal_Solar_Finance_Plan_Flag</description>
        <inlineHelpText>Proposal_Solar_Finance_Plan_Flag</inlineHelpText>
        <label>VP_Proposal_Solar_Finance_Plan_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Proposal_Solar_Ownership_Plan_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VP_Proposal_Solar_Ownership_Plan_Flag</description>
        <inlineHelpText>VP_Proposal_Solar_Ownership_Plan_Flag</inlineHelpText>
        <label>VP_Proposal_Solar_Ownership_Plan_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Purchase_Contract_Type__c</fullName>
        <label>VP_Purchase_Contract_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Roof1_Astrum_SQ__c</fullName>
        <label>VP_Roof1_Astrum_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof1_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Roof1_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Roof1_Mounting_System__c</fullName>
        <label>VP_Roof1_Mounting_System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Roof1_NRG_SQ__c</fullName>
        <description>VP_Roof1_NRG_SQ</description>
        <inlineHelpText>VP_Roof1_NRG_SQ</inlineHelpText>
        <label>VP_Roof1_NRG_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof1_Panel_Count__c</fullName>
        <label>VP_Roof1_Panel_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof1_Sunnova_SQ__c</fullName>
        <description>VP_Roof1_Sunnova_SQ</description>
        <inlineHelpText>VP_Roof1_Sunnova_SQ</inlineHelpText>
        <label>VP_Roof1_Sunnova_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof1_Surcharge__c</fullName>
        <label>VP_Roof1_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Roof1_Surcharge_per_watt__c</fullName>
        <label>VP_Roof1_Surcharge_per_watt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Roof1_Watts__c</fullName>
        <label>VP_Roof1_Watts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof2_Astrum_SQ__c</fullName>
        <label>VP_Roof2_Astrum_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof2_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Roof2_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Roof2_Mounting_System__c</fullName>
        <label>VP_Roof2_Mounting_System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Roof2_NRG_SQ__c</fullName>
        <description>VP_Roof2_NRG_SQ</description>
        <inlineHelpText>VP_Roof2_NRG_SQ</inlineHelpText>
        <label>VP_Roof2_NRG_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof2_Panel_Count__c</fullName>
        <label>VP_Roof2_Panel_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof2_Sunnova_SQ__c</fullName>
        <description>VP_Roof2_Sunnova_SQ</description>
        <inlineHelpText>VP_Roof2_Sunnova_SQ</inlineHelpText>
        <label>VP_Roof2_Sunnova_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof2_Surcharge__c</fullName>
        <label>VP_Roof2_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Roof2_Surcharge_per_watt__c</fullName>
        <label>VP_Roof2_Surcharge_per_watt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Roof2_Watts__c</fullName>
        <label>VP_Roof2_Watts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof3_Astrum_SQ__c</fullName>
        <label>VP_Roof3_Astrum_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof3_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Roof3_Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Roof3_Mounting_System__c</fullName>
        <label>VP_Roof3_Mounting_System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Roof3_NRG_SQ__c</fullName>
        <description>VP_Roof3_NRG_SQ</description>
        <inlineHelpText>VP_Roof3_NRG_SQ</inlineHelpText>
        <label>VP_Roof3_NRG_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof3_Panel_Count__c</fullName>
        <label>VP_Roof3_Panel_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof3_Sunnova_SQ__c</fullName>
        <label>VP_Roof3_Sunnova_SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Roof3_Surcharge__c</fullName>
        <label>VP_Roof3_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Roof3_Surcharge_per_watt__c</fullName>
        <label>VP_Roof3_Surcharge_per_watt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Roof3_Watts__c</fullName>
        <label>VP_Roof3_Watts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_SREC_Contract_Type__c</fullName>
        <label>VP_SREC_Contract_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Special_Parts_Row_1_Cost__c</fullName>
        <label>VP_Special_Parts_Row_1_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Special_Parts_Row_1_Num__c</fullName>
        <label>VP_Special_Parts_Row_1_Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Special_Parts_Row_1__c</fullName>
        <label>VP_Special_Parts_Row_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Special_Parts_Row_2_Cost__c</fullName>
        <label>VP_Special_Parts_Row_2_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Special_Parts_Row_2_Num__c</fullName>
        <label>VP_Special_Parts_Row_2_Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Special_Parts_Row_2__c</fullName>
        <label>VP_Special_Parts_Row_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Special_Parts_Row_3_Cost__c</fullName>
        <label>VP_Special_Parts_Row_3_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Special_Parts_Row_3_Num__c</fullName>
        <label>VP_Special_Parts_Row_3_Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Special_Parts_Row_3__c</fullName>
        <label>VP_Special_Parts_Row_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Special_Parts_Total_Cost__c</fullName>
        <description>Special Parts Total Cost</description>
        <inlineHelpText>Special Parts Total Cost</inlineHelpText>
        <label>VP_Special_Parts_Total_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_State_Income_Tax_Credit__c</fullName>
        <label>VP_State_Income_Tax_Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_State_Solar_Grant_For_Lease__c</fullName>
        <label>VP_State_Solar_Grant_For_Lease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_State_Solar_Grant_Tax__c</fullName>
        <label>VP_State_Solar_Grant_Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_State_Solar_Grant__c</fullName>
        <label>VP_State_Solar_Grant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_State__c</fullName>
        <label>VP_State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_After_Tax_Initial_Payment__c</fullName>
        <label>VP_Sunnova_After_Tax_Initial_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_After_Tax_Lease_Elect_Rate__c</fullName>
        <label>VP_Sunnova_After_Tax_Lease_Elect_Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_Combined_Monthly_Bill__c</fullName>
        <label>VP_Sunnova_Combined_Monthly_Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_Down_Payment__c</fullName>
        <label>VP_Sunnova_Down_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_Lease_Elec_rate__c</fullName>
        <label>VP_Sunnova_Lease_Elec_rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_Lease_Escalator__c</fullName>
        <label>VP_Sunnova_Lease_Escalator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_Lease_Mntly_Paymt_Inc_Tax__c</fullName>
        <label>VP_Sunnova_Lease_Mntly_Paymt_Inc_Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_Lease_Monthly_Payment__c</fullName>
        <label>VP_Sunnova_Lease_Monthly_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_Lease_Term__c</fullName>
        <label>VP_Sunnova_Lease_Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_Lifetime_Sales_Tax__c</fullName>
        <label>VP_Sunnova_Lifetime_Sales_Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_Prepay_Amt_After_Tax__c</fullName>
        <label>VP_Sunnova_Prepay_Amt_After_Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_Prepay_Amt__c</fullName>
        <label>VP_Sunnova_Prepay_Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Sunnova_Total_Payments_Over_Lease__c</fullName>
        <label>VP_Sunnova_Total_Payments_Over_Lease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_TSRF__c</fullName>
        <label>VP_TSRF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Lease_Promo_Cash_Back__c</fullName>
        <description>VP_Tables_Lease_Promo_Cash_Back</description>
        <inlineHelpText>VP_Tables_Lease_Promo_Cash_Back</inlineHelpText>
        <label>VP_Tables_Lease_Promo_Cash_Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Lease_Promo_Expiration__c</fullName>
        <description>VP_Tables_Lease_Promo_Expiration</description>
        <inlineHelpText>VP_Tables_Lease_Promo_Expiration</inlineHelpText>
        <label>VP_Tables_Lease_Promo_Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Lease_Promo_Name__c</fullName>
        <description>VP_Tables_Lease_Promo_Name</description>
        <inlineHelpText>VP_Tables_Lease_Promo_Name</inlineHelpText>
        <label>VP_Tables_Lease_Promo_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Lease_Promo_Total_Value__c</fullName>
        <description>VP_Tables_Lease_Promo_Total_Value</description>
        <inlineHelpText>VP_Tables_Lease_Promo_Total_Value</inlineHelpText>
        <label>VP_Tables_Lease_Promo_Total_Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Panel_1_10KW_Price__c</fullName>
        <label>VP_Tables_Panel_1_10KW_Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Panel_1_Name__c</fullName>
        <label>VP_Tables_Panel_1_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Panel_2_10KW_Price__c</fullName>
        <label>VP_Tables_Panel_2_10KW_Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Panel_2_Name__c</fullName>
        <label>VP_Tables_Panel_2_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Panel_3_10KW_Price__c</fullName>
        <label>VP_Tables_Panel_3_10KW_Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Panel_3_Name__c</fullName>
        <label>VP_Tables_Panel_3_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Purchase_Promo_Expiration__c</fullName>
        <description>VP_Tables_Purchase_Promo_Expiration</description>
        <inlineHelpText>VP_Tables_Purchase_Promo_Expiration</inlineHelpText>
        <label>VP_Tables_Purchase_Promo_Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Purchase_Promo_Name__c</fullName>
        <description>VP_Tables_Purchase_Promo_Name</description>
        <inlineHelpText>VP_Tables_Purchase_Promo_Name</inlineHelpText>
        <label>VP_Tables_Purchase_Promo_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Tables_Purchase_Promo_Total_Value__c</fullName>
        <description>VP_Tables_Purchase_Promo_Total_Value</description>
        <inlineHelpText>VP_Tables_Purchase_Promo_Total_Value</inlineHelpText>
        <label>VP_Tables_Purchase_Promo_Total_Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Tax_City__c</fullName>
        <label>VP_Tax_City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Todays_Date__c</fullName>
        <description>Calculator Today&apos;s date</description>
        <inlineHelpText>Calculator Today&apos;s date</inlineHelpText>
        <label>VP_Todays_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VP_Tornado_Adder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Tornado_Adder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Total_Payable_after_Promo__c</fullName>
        <label>VP_Total_Payable_after_Promo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Total_Price_After_SRECS_And_Promo__c</fullName>
        <label>VP_Total_Price_After_SRECS_And_Promo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Total_Price_After_Upfront_SRECS__c</fullName>
        <label>VP_Total_Price_After_Upfront_SRECS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Total_Price__c</fullName>
        <label>VP_Total_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Total_Promo_Lease__c</fullName>
        <description>VP_Total_Promo_Lease</description>
        <inlineHelpText>VP_Total_Promo_Lease</inlineHelpText>
        <label>VP_Total_Promo_Lease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Trenching_Length__c</fullName>
        <label>VP_Trenching_Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Trenching_Material__c</fullName>
        <label>VP_Trenching_Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Trenching_Surcharge__c</fullName>
        <description>Trenching Surcharge</description>
        <inlineHelpText>Trenching Surcharge</inlineHelpText>
        <label>VP_Trenching_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Upfront_SREC_Amt_Per_First_Yr_SREC__c</fullName>
        <label>VP_Upfront_SREC_Amt_Per_First_Yr_SREC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Upfront_SREC_Amt__c</fullName>
        <label>VP_Upfront_SREC_Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Upfront_SREC_Offer_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Upfront_SREC_Offer_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Upfront_SREC_Term_Years__c</fullName>
        <label>VP_Upfront_SREC_Term_Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Utility_Incentive_Program__c</fullName>
        <label>VP_Utility_Incentive_Program</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Utility_Rate_Inflator__c</fullName>
        <label>VP_Utility_Rate_Inflator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VP_Utility__c</fullName>
        <label>VP_Utility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Version_Date__c</fullName>
        <description>Calculator Version Date</description>
        <inlineHelpText>Calculator Version Date</inlineHelpText>
        <label>VP_Version_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VP_Watts_per_panel__c</fullName>
        <description>VP_Watts_per_panel</description>
        <inlineHelpText>VP_Watts_per_panel</inlineHelpText>
        <label>VP_Watts_per_panel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Zip_Code__c</fullName>
        <label>VP_Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Legacy Calculator Data</label>
    <nameField>
        <displayFormat>LCD-{0000000000}</displayFormat>
        <label>Calculator Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy Calculators Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>